--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -1,15 +1,19 @@
-::placeholder {
-	color: #777;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
 html {
 	font-size: 16px;
-	line-height: 1.5;
-	font-family: "OpenSansRegular", Arial, sans-serif;
-	color: #222;
+	line-height: 24px;
+	font-family: $font-regular;
+	color: $main-text-color;
 	font-style: normal;
+}
 
-	background-color: #ccc;
+h1, h2, h3, p {
+	margin: 0;
 }
 
 img {
@@ -17,35 +21,14 @@ img {
 	height: auto;
 }
 
-.hidden {
-	display: none !important;
-}
-
-hr {
-		display: block;
-		height: 1px;
-		border: 0;
-		border-top: 1px solid #ccc;
-		margin: 10px 0;
-		padding: 0;
+a,
+a:hover,
+a:visited,
+a:active {
+	text-decoration: none;
 }
 
 // Допускает только вертикальное изменение текстового поля
 textarea {
     resize: vertical;
-}
-
-// Скрывает элемент "безопасно"
-.visually-hidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    -webkit-clip-path: inset(50%);
-    clip-path: inset(50%);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-    white-space: nowrap; /* 1 */
 }
