--- a/src/sass/blocks/main.scss
+++ b/src/sass/blocks/main.scss
@@ -3,6 +3,7 @@
         width: 650px;
         font-size: 55px;
         line-height: 70px;
+        margin-bottom: 50px;
     }
 
     &__important-text {
