--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -1,7 +1,10 @@
 // Цвета
 $main-text-color: #0d0d0d;
+$text-light-color: #696969;
 $important-text-color: #5f22b2;
 $important-light-color: #5f22b2;
+$white-color: #e5e5e5;
+$background-color: #fbf7ff;
 
 // Размеры
 $mobile-widths-only: "max-width: 767px";
@@ -14,3 +17,4 @@ $font-regular: 'Gilroy-Regular', sans-serif;
 $font-bold: 'Gilroy-Bold', sans-serif;
 $font-extrabold: 'Gilroy-ExtraBold', sans-serif;
 $font-medium: 'Gilroy-Medium', sans-serif;
+$font-button-medium: 'GothamPro-Medium', sans-serif;
