--- a/src/sass/blocks/logo.scss
+++ b/src/sass/blocks/logo.scss
@@ -1,13 +1,20 @@
 .logo {
     padding-left: 80px;
-    padding-bottom: 10px;
-    height: 100px;
-    background-image: url(../img/logo.png);
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: flex-end;
+    position: relative;
+    font-size: 20px;
 
-    &__span {
-        font-family: $font-bold;
+    &::before {
+        content: '';
+        width: 62px;
+        height: 95px;
+        position: absolute;
+        left: 0;
+        bottom: -10px;
+        background-image: url(../img/logo.png);
+        background-repeat: no-repeat;
+    }
+
+    &_footer::before {
+        background-image: url(../img/logo_footer.png);
     }
 }
