--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -25,3 +25,10 @@
 	font-weight: normal;	
 	font-style: normal;
 }
+
+@font-face {
+	font-family: "GothamPro-Medium";
+	src: 	url("../fonts/GothamPro-Medium/GothamPro-Medium.woff") format("woff");
+	font-weight: normal;	
+	font-style: normal;
+}
