--- a/src/sass/mixins.scss
+++ b/src/sass/mixins.scss
@@ -4,3 +4,10 @@
 	&:-moz-placeholder  				 { @content; }
 	&:-ms-input-placeholder  		 { @content; }
 }
+
+@mixin section-background($url) {
+	background-image: url($url);
+	background-repeat: no-repeat;
+	background-position: center 0;
+	background-size: auto;
+}
