--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -15,6 +15,8 @@ $desktop-widths: "min-width: 1200px";
 // Шрифты
 $font-regular: 'Gilroy-Regular', sans-serif;
 $font-bold: 'Gilroy-Bold', sans-serif;
+$font-semibold: 'Gilroy-SemiBold', sans-serif;
 $font-extrabold: 'Gilroy-ExtraBold', sans-serif;
 $font-medium: 'Gilroy-Medium', sans-serif;
 $font-button-medium: 'GothamPro-Medium', sans-serif;
+$font-flower-city: 'TheFlowerCity';
