finished desktop layout

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -11,6 +11,11 @@ html {
 	color: $main-text-color;
 	font-style: normal;
 	background-color: $background-color;
+	overflow-x: hidden;
+}
+
+body {
+	overflow-x: hidden;
 }
 
 h1, h2, h3, p {
