--- a/src/sass/blocks/services-section.scss
+++ b/src/sass/blocks/services-section.scss
@@ -1,4 +1,10 @@
 .services-section {
+    padding-bottom: 89px;
+
+    &__header {
+        margin-bottom: 114px;
+    }
+
     &__services {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
