--- a/src/sass/blocks/about-section.scss
+++ b/src/sass/blocks/about-section.scss
@@ -1,5 +1,5 @@
 .about-section {
-    @include section-background('../../img/about-bg.jpg');
+    @include section-background('../img/about-bg.jpg');
     padding-top: 176px;
     padding-bottom: 160px;
 
