--- a/src/sass/blocks/algorithm-section.scss
+++ b/src/sass/blocks/algorithm-section.scss
@@ -1,5 +1,5 @@
 .algorithm-section {
-    @include section-background("../../img/algorithm-bg.jpg");
+    @include section-background("../img/algorithm-bg.jpg");
     padding-top: 198px;
     padding-bottom: 220px;
 
