--- a/src/sass/blocks/checkbox.scss
+++ b/src/sass/blocks/checkbox.scss
@@ -14,7 +14,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        background-image: url(../../img/checkbox-mark.png);
+        background-image: url(../img/checkbox-mark.png);
         background-repeat: no-repeat;
         background-position: center;
         transition: opacity .1s ease;
