--- a/src/sass/blocks/flask.scss
+++ b/src/sass/blocks/flask.scss
@@ -2,7 +2,7 @@
     width: 100%;
     max-width: 547px;
     height: 395px;
-    background-image: url(../../img/flask.png);
+    background-image: url(../img/flask.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center bottom;
@@ -14,7 +14,7 @@
         right: 0;
         bottom: 0;
         height: 50%;
-        background-image: url(../../img/flask_full.png);
+        background-image: url(../img/flask_full.png);
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center bottom;
