--- a/src/sass/blocks/header-phone.scss
+++ b/src/sass/blocks/header-phone.scss
@@ -23,7 +23,7 @@
             right: 0;
             bottom: 0;
             height: 2px;
-            background-image: url(../../img/phone-dot.png);
+            background-image: url(../img/phone-dot.png);
         }
     }
 }
