--- a/src/sass/blocks/phone.scss
+++ b/src/sass/blocks/phone.scss
@@ -2,7 +2,7 @@
     font-family: $font-medium;
     display: block;
     padding-left: 24px;
-    background-image: url(../../img/phone.png);
+    background-image: url(../img/phone.png);
     background-repeat: no-repeat;
     background-position: 0 center;
     font-family: $font-medium;
