--- a/src/sass/blocks/request-section.scss
+++ b/src/sass/blocks/request-section.scss
@@ -1,5 +1,5 @@
 .request-section {
-    @include section-background('../../img/request-bg.jpg');
+    @include section-background('../img/request-bg.jpg');
     padding-top: 115px;
     padding-bottom: 140px;
 
