--- a/src/sass/blocks/service.scss
+++ b/src/sass/blocks/service.scss
@@ -1,7 +1,7 @@
 .service {
     width: 282px;
     height: 181px;
-    background-image: url(../../img/services/service-bg.png);
+    background-image: url(../img/services/service-bg.png);
     display: flex;
     align-items: center;
     padding-left: 45px;
@@ -16,7 +16,7 @@
         right: 0;
         bottom: 0;
         left: 0;
-        background-image: url(../../img/services/service-bg_hover.png);
+        background-image: url(../img/services/service-bg_hover.png);
         opacity: 0;
         transition: opacity .2s;
     }
@@ -93,7 +93,7 @@
             }
 
             .service__image {
-                background-image: url(../../img/services/1.png);
+                background-image: url(../img/services/1.png);
                 background-position: 11px 62px
             }
         }
@@ -114,7 +114,7 @@
             }
 
             .service__image {
-                background-image: url(../../img/services/2.png);
+                background-image: url(../img/services/2.png);
                 background-position: 15px 29px;
             }
         }
@@ -135,7 +135,7 @@
             }
 
             .service__image {
-                background-image: url(../../img/services/3.png);
+                background-image: url(../img/services/3.png);
                 background-position: 2px 22px;
             }
         }
@@ -163,7 +163,7 @@
             }
 
             .service__image {
-                background-image: url(../../img/services/4.png);
+                background-image: url(../img/services/4.png);
                 background-position: 4px 17px;
             }
         }
