--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -7,6 +7,7 @@ $white-color: #e5e5e5;
 $background-color: #fbf7ff;
 
 // Размеры
+$mobile-width: "max-width: 425px";
 $mobile-widths-only: "max-width: 767px";
 $tablet-widths: "min-width: 768px";
 $tablet-widths-only: "max-width: 1199px";
