--- a/src/sass/blocks/algorithm.scss
+++ b/src/sass/blocks/algorithm.scss
@@ -13,7 +13,7 @@
         left: 0;
         right: 0;
         margin: auto;
-        background-image: url(../../img/algorithm/dot.png);
+        background-image: url(../img/algorithm/dot.png);
     }
 
     &__entity {
@@ -28,7 +28,7 @@
             left: 0;
             right: 0;
             height: 145px;
-            background-image: url(../../img/algorithm/dot.png);
+            background-image: url(../img/algorithm/dot.png);
         }
 
         &:nth-child(2n) {
