--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -2,7 +2,7 @@
     text-shadow: 0px 2px 0px rgba(252, 236, 152, 0.004);
     font-size: 16px;
     color: #0e0e0e;
-    background-image: url(../../img/button-bg.png);
+    background-image: url(../img/button-bg.png);
     background-size: contain;
     background-repeat: no-repeat;
     box-shadow: 0px 3px 0px 0px rgba(228, 177, 0, 0.004),inset 0px 2px 27px 0px rgba(225, 176, 4, 0.004);
