--- a/src/sass/blocks/calculator-section.scss
+++ b/src/sass/blocks/calculator-section.scss
@@ -8,7 +8,7 @@
 
     &__flask-section {
         width: 50%;
-        @include section-background('../../img/calculator-bg.jpg');
+        @include section-background('../img/calculator-bg.jpg');
         background-position: 0 0;
         min-height: 550px;
         padding-top: 120px;
