--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -8,8 +8,7 @@ $background-color: #fbf7ff;
 
 // Размеры
 $mobile-width: "max-width: 425px";
-$mobile-widths-only: "max-width: 767px";
-$tablet-widths: "min-width: 768px";
+$tablet-width: "max-width: 768px";
 $tablet-widths-only: "max-width: 1199px";
 $desktop-widths: "min-width: 1200px";
 
