--- a/src/sass/blocks/header-phone.scss
+++ b/src/sass/blocks/header-phone.scss
@@ -2,11 +2,24 @@
     width: 203px;
     margin-top: -7px;
 
+    @media ($tablet-width) {
+        width: 34px;
+        height: 34px;
+    }
+
     &__phone {
         font-size: 22px;
         color: $main-text-color;
         letter-spacing: -0.2px;
         margin-bottom: 7px;
+
+        @media ($tablet-width) {
+            color: transparent;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            background-image: url(../img/phone_mobile.png);
+        }
     }
 
     &__callback {
@@ -24,6 +37,10 @@
             bottom: 0;
             height: 2px;
             background-image: url(../img/phone-dot.png);
+        }
+
+        @media ($tablet-width) {
+            display: none;
         }
     }
 }
