--- a/src/sass/blocks/service.scss
+++ b/src/sass/blocks/service.scss
@@ -1,7 +1,8 @@
 .service {
-    width: 282px;
+    // width: 282px;
     height: 181px;
     background-image: url(../img/services/service-bg.png);
+    background-size: 100% 100%;
     display: flex;
     align-items: center;
     padding-left: 45px;
@@ -17,6 +18,7 @@
         bottom: 0;
         left: 0;
         background-image: url(../img/services/service-bg_hover.png);
+        background-size: inherit;
         opacity: 0;
         transition: opacity .2s;
     }
@@ -71,6 +73,12 @@
         position: absolute;
         left: 5px;
         bottom: 131px;
+
+        @media ($mobile-width) {
+            left: 0;
+            right: 0;
+            margin: auto;
+        }
 
         &_1 {
             .service__circle_1 {
