--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -4,9 +4,37 @@
     padding: 58px 0 53px;
     font-size: 18px;
 
+
     &__container {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        
+        @media ($tablet-width) {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+
+    &__item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        @media ($tablet-width) {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 25px;
+
+
+            &_copyright {
+                order: 3;
+                margin-bottom: 0;
+            }
+
+            &_contacts {
+                order: 2;
+            }
+        }
     }
 
     &__copyright {
