--- a/src/sass/blocks/service.scss
+++ b/src/sass/blocks/service.scss
@@ -1,5 +1,5 @@
 .service {
-    // width: 282px;
+    width: 282px;
     height: 181px;
     background-image: url(../img/services/service-bg.png);
     background-size: 100% 100%;
