--- a/src/sass/blocks/services-section.scss
+++ b/src/sass/blocks/services-section.scss
@@ -14,9 +14,16 @@
         grid-template-columns: repeat(4, 282px);
         grid-gap: 14px;
 
-        @media ($mobile-width) {
+        @media (min-width: 769px) and (max-width: 1199px) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            grid-row-gap: 100px;
+        }
+
+        @media ($tablet-width) {
+            width: 100%;
             grid-template-columns: 1fr;
-            grid-template-rows: repeat(4, 1ft);
+            grid-template-rows: repeat(4, 1fr);
             grid-gap: 100px;
         }
     }
