--- a/src/sass/blocks/request-section.scss
+++ b/src/sass/blocks/request-section.scss
@@ -4,6 +4,7 @@
     padding-bottom: 140px;
 
     @media ($tablet-width) {
+        padding-top: 0;
         padding-bottom: 390px;
         background-position: 29% bottom;
         background-size: 1090px;
