--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -16,4 +16,5 @@
     text-transform: uppercase;
     letter-spacing: 1px;
     max-width: 100%;
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
 }
