--- a/src/sass/blocks/main-section.scss
+++ b/src/sass/blocks/main-section.scss
@@ -2,16 +2,22 @@
     padding-bottom: 356px;
     @include section-background('../img/main-bg.jpg');
 
-    @media ($mobile-width) {
-        background-image: url(../img/main-bg_mobile.jpg);
-        padding-bottom: 50px;
+    @media ($tablet-width) {
+        background-position: right 0;
+        background-size: auto 100%;
+        padding-bottom: 0;
+        margin-bottom: 60px;
+    }
+
+    @media (max-width: 525px) {
+        background-position: 79% 0;
     }
 
     &__header {
         margin-bottom: 209px;
 
         @media ($tablet-width) {
-            margin-bottom: 50px;
+            margin-bottom: 260px;
         }
     }
 }
