--- a/src/sass/blocks/main.scss
+++ b/src/sass/blocks/main.scss
@@ -5,15 +5,20 @@
         line-height: 70px;
         margin-bottom: 36px;
 
+        @media ($mobile-width) {
+            font-size: 24px;
+            line-height: 35px;
+        }
         
         @media ($tablet-width) {
-            font-size: 24px;
             text-align: center;
-            line-height: 35px;
+            font-size: 34px;
+            line-height: 45px;
             width: auto;
             font-family: $font-regular;
-            margin-bottom: 280px;
+            margin: 0 auto 60px;
             font-weight: normal;
+            max-width: 400px;
         }
     }
 
@@ -23,7 +28,7 @@
     }
 
     &__button {
-        @media ($mobile-width) {
+        @media ($tablet-width) {
             margin: auto;
         }
     }
