--- a/src/sass/blocks/section-header.scss
+++ b/src/sass/blocks/section-header.scss
@@ -5,7 +5,7 @@
     position: relative;
     z-index: 1;
 
-    @media ($mobile-width) {
+    @media ($tablet-width) {
         font-size: 24px;
         text-align: center;
     }
@@ -25,11 +25,14 @@
         white-space: nowrap;
         z-index: -1;
 
-        @media ($mobile-width) {
+        @media ($tablet-width) {
             font-size: 27px;
             text-align: center;
             transform: matrix( 1.56752130548609,-0.23113535644148,0.23113535644148,1.5675213054861,0,0);
-            left: 30px;
+            left: 0;
+            right: 0;
+            margin: auto;
+            width: auto;
         }    
     }
 }
