--- a/src/sass/blocks/calculator-section.scss
+++ b/src/sass/blocks/calculator-section.scss
@@ -4,6 +4,7 @@
 
     @media ($tablet-width) {
         padding-top: 0;
+        padding-bottom: 0;
         margin-top: -100px;
     }
 
@@ -14,6 +15,7 @@
         @media ($tablet-width) {
             flex-direction: column;
             align-items: center;
+            padding-top: 50px;
         }
     }
 
@@ -63,10 +65,11 @@
         margin-bottom: 66px;
         
         @media ($tablet-width) {
-            /**
-            * test
-            */
-            display: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
         }
     }
 
