--- a/src/sass/blocks/algorithm-section.scss
+++ b/src/sass/blocks/algorithm-section.scss
@@ -4,7 +4,7 @@
     padding-bottom: 220px;
     
     @media ($tablet-width) {
-        background-size: auto 100%;
+        background-image: url(../img/algorithm-bg_mobile.jpg);
     }
 
     &__header {
