--- a/src/sass/blocks/logo.scss
+++ b/src/sass/blocks/logo.scss
@@ -6,6 +6,7 @@
     @media ($tablet-width) {
         font-size: 18px;
         padding-left: 50px;
+        line-height: 22px;
     }
 
     &::before {
