--- a/src/sass/blocks/about-section.scss
+++ b/src/sass/blocks/about-section.scss
@@ -4,10 +4,9 @@
     padding-bottom: 160px;
 
     @media ($tablet-width) {
-        padding-bottom: 240px;
         padding-top: 130px;
-        background-position: left top;
-        background-size: auto 100%;
+        background-image: url(../img/about-bg_mobile.jpg);
+        height: 854px;
     }
 
     &__content {
@@ -34,6 +33,9 @@
         @media ($tablet-width) {
             font-size: 16px;
             text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 320px;
         }
     }
 }
