--- a/src/sass/blocks/main.scss
+++ b/src/sass/blocks/main.scss
@@ -4,6 +4,7 @@
         font-size: 55px;
         line-height: 70px;
         margin-bottom: 36px;
+        position: relative;
 
         @media ($mobile-width) {
             font-size: 24px;
@@ -30,6 +31,10 @@
     &__button {
         @media ($tablet-width) {
             margin: auto;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 553px;
         }
     }
 }
