--- a/src/sass/blocks/footer.scss
+++ b/src/sass/blocks/footer.scss
@@ -1,7 +1,7 @@
 .footer {
     background-color: $main-text-color;
     color: $white-color;
-    padding: 58px 0 53px;
+    padding: 53px 0 52px;
     font-size: 18px;
 
     @media ($tablet-width) {
@@ -23,6 +23,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        &_logo {
+            justify-content: flex-start;
+        }
 
         @media ($tablet-width) {
             display: flex;
