--- a/src/sass/blocks/request-section.scss
+++ b/src/sass/blocks/request-section.scss
@@ -4,7 +4,7 @@
     padding-bottom: 140px;
 
     @media ($tablet-width) {
-        padding-top: 0;
+        padding-top: 36px;
         padding-bottom: 390px;
         background-image: url(../img/request-bg_mobile.jpg);
         background-position: center bottom;
