--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -17,4 +17,11 @@
     letter-spacing: 1px;
     max-width: 100%;
     -webkit-tap-highlight-color: rgba(255,255,255,0);
+
+    @media ($tablet-width) {
+        background-image: url(../img/button-bg_mobile.png);
+        max-width: 320px;
+        width: 100%;
+        height: 78px;
+    }
 }
