--- a/src/sass/blocks/checkboxes.scss
+++ b/src/sass/blocks/checkboxes.scss
@@ -4,4 +4,35 @@
     grid-template-columns: 1fr 1fr;
     grid-row-gap: 15px;
     max-width: 358px;
+    
+    &__item {
+        @media ($tablet-width) {
+            &_vk {
+                grid-area: vk;
+            }
+        
+            &_instagram {
+                grid-area: instagram;
+            }
+        
+            &_fb {
+                grid-area: fb;
+            }
+        
+            &_ok {
+                grid-area: ok;
+            }
+        }        
+    }
+
+    @media ($tablet-width) {
+        grid-template-areas: 
+        "instagram"
+        "fb"
+        "vk"
+        "ok"
+        ;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+    }
 }
