--- a/src/sass/blocks/flask.scss
+++ b/src/sass/blocks/flask.scss
@@ -4,7 +4,7 @@
     height: 395px;
     background-image: url(../img/flask.png);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: 100%;
     background-position: center bottom;
     position: relative;
 
