--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -17,6 +17,16 @@
     letter-spacing: 1px;
     max-width: 100%;
     -webkit-tap-highlight-color: rgba(255,255,255,0);
+    transition: all .2s;
+    transform: scale(1);
+
+    &:hover {
+        transform: scale(1.03);
+    }
+
+    &:active {
+        transform: scale(1.04);
+    }
 
     @media ($tablet-width) {
         background-image: url(../img/button-bg_mobile.png);
