--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -19,6 +19,7 @@
     -webkit-tap-highlight-color: rgba(255,255,255,0);
     transition: all .2s;
     transform: scale(1);
+    cursor: pointer;
 
     &:hover {
         transform: scale(1.03);
