--- a/src/sass/blocks/about-section.scss
+++ b/src/sass/blocks/about-section.scss
@@ -2,11 +2,18 @@
     @include section-background('../img/about-bg.jpg');
     padding-top: 176px;
     padding-bottom: 160px;
+    position: relative;
 
     @media ($tablet-width) {
         padding-top: 106px;
+        padding-bottom: 245px;
         background-image: url(../img/about-bg_mobile.jpg);
-        height: 854px;
+        background-position: 0 center;
+    }
+
+    &__container {
+        position: relative;
+        z-index: 1;
     }
 
     &__content {
@@ -36,6 +43,24 @@
             margin-left: auto;
             margin-right: auto;
             max-width: 320px;
+        }
+    }
+
+    &__laptop {
+        max-width: 447px;
+        background-image: url(../img/about-laptop.png);
+        background-repeat: no-repeat;
+        background-position: center bottom;
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+
+        @media ($tablet-width) {
+            display: block;
         }
     }
 }
